<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    tools:openDrawer="start">

    <include
        layout="@layout/content_nav_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_header_height"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/DriverImage"
                    android:layout_width="@dimen/imgNavSize"
                    android:layout_height="@dimen/imgNavSize"
                    android:src="@mipmap/ic_launcher_round"
                    app:riv_border_color="#fbfbfb"
                    app:riv_border_width="4dp"
                    app:riv_corner_radius="@dimen/imgNavCornerRadius" />

                <TextView
                    android:id="@+id/DriverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Driver Name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/nameSizeNavDrawer"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/DriverRate"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:numStars="5"
                    android:rating="0" />

            </LinearLayout>

            <LinearLayout
                style="@style/ItemNavStyle"
                android:background="#F3F3F3">

                <TextView
                    android:id="@+id/tvAvailable"
                    style="@style/NavTextStyle"
                    android:layout_weight="1"
                    android:text="@string/available" />

                <Switch
                    android:id="@+id/switchAvailable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:checked="false"
                    android:theme="@style/SwitchTheme" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemNavHome"
                style="@style/ItemNavStyle"
                android:layout_marginTop="7dp">

                <ImageView
                    style="@style/NavImgStyle"
                    android:src="@drawable/ic_nav_home" />

                <TextView
                    style="@style/NavTextStyle"
                    android:text="@string/navMain" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemNavYourTrips"
                style="@style/ItemNavStyle">

                <ImageView
                    style="@style/NavImgStyle"
                    android:src="@drawable/ic_nav_history" />

                <TextView
                    style="@style/NavTextStyle"
                    android:text="@string/navYourTrips" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemNavFinance"
                style="@style/ItemNavStyle">

                <ImageView
                    style="@style/NavImgStyle"
                    android:src="@drawable/ic_nav_wallet" />

                <TextView
                    style="@style/NavTextStyle"
                    android:text="@string/navFinance" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemNavUpload"
                style="@style/ItemNavStyle">

                <ImageView
                    style="@style/NavImgStyle"
                    android:src="@drawable/ic_nav_upload" />

                <TextView
                    style="@style/NavTextStyle"
                    android:text="@string/navUpload" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemNavHelp"
                style="@style/ItemNavStyle">

                <ImageView
                    style="@style/NavImgStyle"
                    android:src="@drawable/ic_nav_help" />

                <TextView
                    style="@style/NavTextStyle"
                    android:text="@string/navHelp" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/itemNavLogout"
                    style="@style/ItemNavStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="25dp"
                    android:padding="0dp">

                    <ImageView
                        style="@style/NavImgStyle"
                        android:src="@drawable/ic_nav_logout" />

                    <TextView
                        style="@style/NavTextStyle"
                        android:text="@string/navLogout" />
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>