<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    android:orientation="vertical"
    tools:context=".FinishRateActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/finish_rate_bg"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:textColor="@color/colorPrimary"
            android:textSize="64sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sr"
            android:textColor="#6D6D6D"

            android:textSize="37sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/LayoutTripDataStyle"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="12dp"
            android:background="@drawable/trip_distance_bg"
            android:layoutDirection="ltr">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_distance" />

            <TextView
                style="@style/TextValueStyle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="4dp"
                android:text="1.2" />

            <TextView
                style="@style/TextUnitStyle"
                android:text="@string/kilometer" />


        </LinearLayout>

        <LinearLayout
            style="@style/LayoutTripDataStyle"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="12dp"
            android:background="@drawable/trip_duration_bg"
            android:layoutDirection="rtl">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_trip_duration" />

            <TextView
                style="@style/TextValueStyle"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="10dp"
                android:text="10" />

            <TextView
                style="@style/TextUnitStyle"
                android:text="@string/minutes" />

        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:background="@drawable/message_title_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="62dp"
                android:text="@string/customerRate"
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/ratingUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:numStars="5" />

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/yellow_btn_rate_bg"
                android:text="@string/send"
                android:textColor="@color/textColorDark" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/img_rate_customer_bg"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

</LinearLayout>