<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_dialog_copmlete_signup"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_dialog_h"
        android:paddingEnd="@dimen/padding_dialog_h"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopMsgSignup"
            android:text="@string/completeSignupMsg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginPhoneChangeH"
            android:layout_marginTop="@dimen/marginDialogV1"
            android:layout_marginEnd="@dimen/marginPhoneChangeH">

            <TextView
                android:id="@+id/tvPhoneDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layoutDirection="ltr"
                android:text="+96556655558"
                android:textSize="@dimen/phoneDialogSize"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_btn_change_number"
                android:paddingStart="@dimen/btn_padding_dialog_h"
                android:paddingTop="@dimen/btn_padding_dialog_v"
                android:paddingEnd="@dimen/btn_padding_dialog_h"
                android:paddingBottom="@dimen/btn_padding_dialog_v"
                android:text="@string/change" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginDialogV2"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtSignUp1"
                android:maxLength="1"
                style="@style/TxtDialogStyle" />

            <EditText
                android:id="@+id/txtSignUp2"
                style="@style/TxtDialogStyle" />

            <EditText
                android:id="@+id/txtSignUp3"
                style="@style/TxtDialogStyle" />

            <EditText
                android:id="@+id/txtSignUp4"
                style="@style/TxtDialogStyle" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginDialogV3"
            android:text="@string/completeSignup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/marginDialogV2"
            android:layout_marginBottom="@dimen/marginDialogV2"
            android:text="@string/didntRecieveCode" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_msg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textResendSize"
                android:layout_alignBottom="@id/imgMsg"
                android:layout_toEndOf="@id/imgMsg"
                android:text="@string/resendCode" />

            <TextView
                android:id="@+id/countDown"
                android:layout_width="wrap_content"
                android:layout_alignBottom="@id/imgMsg"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="00.30" />
        </RelativeLayout>
    </LinearLayout>


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_complete_signup" />
</RelativeLayout>