<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FinanceActivity">


    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/calendarLayoutPaddingHor"
        android:background="@drawable/date_finance_bg"
        android:paddingStart="@dimen/calendarLayoutPaddingHor"
        android:paddingTop="5dp"
        android:paddingEnd="@dimen/calendarLayoutPaddingHor"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/tvFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/layoutFrom"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:text="@string/from" />

        <LinearLayout
            android:id="@+id/layoutFrom"
            style="@style/CalenderFinanceStyle"
            android:layout_alignParentStart="true">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_schedule_white" />

            <TextView
                android:id="@+id/calFrom"
                style="@style/CalendarTextStyleFinance"
                android:text="0000-00-00" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/layoutFrom"
            android:layout_alignBottom="@id/layoutFrom"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_toEndOf="@id/layoutFrom">

            <View
                android:layout_width="16dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary" />
        </FrameLayout>


        <LinearLayout
            android:id="@+id/layoutTo"
            style="@style/CalenderFinanceStyle"
            android:layout_below="@id/tvFrom"
            android:layout_toEndOf="@id/dash">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_schedule_white" />

            <TextView
                android:id="@+id/tvCalTo"
                style="@style/CalendarTextStyleFinance"
                android:text="0000-00-00" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/layoutTo"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:text="@string/to" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="#" />

        <View
            android:layout_width="@dimen/dividerSize"
            android:layout_height="match_parent"
            android:background="#D0D4D9" />

        <TextView
            style="@style/TextTitleFinanceStyle"
            android:layout_weight="1.2"
            android:text="@string/dateAndTime" />

        <View
            android:layout_width="@dimen/dividerSize"
            android:layout_height="match_parent"
            android:background="#D0D4D9" />

        <TextView
            style="@style/TextTitleFinanceStyle"
            android:layout_height="wrap_content"
            android:text="@string/theClient" />

        <View
            android:layout_width="@dimen/dividerSize"
            android:layout_height="match_parent"
            android:background="#D0D4D9" />

        <TextView
            style="@style/TextTitleFinanceStyle"
            android:layout_weight="1.2"
            android:text="@string/orderValue" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvFinance"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:src="@drawable/ic_total_money" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginTotalHor"
            android:layout_marginEnd="@dimen/marginTotalHor"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/totalOrders" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/paddTotalHor"
            android:paddingTop="@dimen/paddTotalVer"
            android:textColor="@color/textColorDarkBlue"
            android:paddingEnd="@dimen/paddTotalHor"
            android:paddingBottom="@dimen/paddTotalVer"
            android:text="000" />

    </LinearLayout>

</LinearLayout>